# email-triage-env

./: .gitignore  LICENSE  README.md  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: data.py  environment.py  models.py  tasks.py
server/: Dockerfile  app.py
