[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"